# micropump_controller

./: .env  .env_backup  .gitignore  AGENTS.md  AI_WINDOWS_SETUP_INSTRUCTIONS.md  COMPREHENSIVE_STRATEGY_ANALYSIS.md  DEPLOY_ALL_SOLUTIONS.py  DEVICE_ID_IMPROVEMENTS.md  INSTALL_PUMP_DRIVERS.bat  LINUX_SETUP_GUIDE.md  MICROSCOPE_BIDIRECTIONAL.md  PUMP_CONNECTION_STATUS.md  PUMP_STATUS.py  README_PUMP_SOLUTIONS.md  VERIFY_PUMP_INSTALLATION.py  ZADIG_DRIVER_FREE_SOLUTION.py  audio_pump_test.py  cli.py  direct_usb_audio_test.py  environment.yml  manual_usb_test.py  microscope_listener.py  pump_control_simple.py  pump_diagnostic.py  pyproject.toml  radical_driver_free_test.py  robot_config.yaml  setup_usb_forwarding.ps1  simple_audio_pump_test.py  simple_diagnostic.py  simple_driver_test.py  targeted_radical_test.py  test_all_components.py  test_alternative.py  test_audio_detection.py  test_audio_simple.py  test_bidirectional_microscope.py  test_com4.bat  test_connection.py  test_linux_direct.py  (+15 more)
.github/: copilot-instructions.md
config_examples/: README.md  cleaning_cycle_valve_pump.yaml  experiment_1.yaml  microscope_workflow.yaml  valve_test.yaml
delete/: CONNECTION_INSTRUCTIONS.md  DIAGNOSIS_SUMMARY.md  DUAL_APPROACH_GUIDE.md  Dockerfile  TEST_SUITE_SUMMARY.md  WSL_SETUP_GUIDE.md  WSL_USB_SETUP.md  check_usb_devices.py  demo_drop_in_replacement.py  diagnose.bat  docker-compose.yml  driver_vs_driverfree_test.py  environment.yml  force_ftdi_recognition.sh  install_drivers_helper.py  pump_control.py  pump_diagnostic.py  quick_audio_test.py  quick_test.py  scan_com_ports.py  (+25 more)
(+62 files in other folders)
